[gd_scene load_steps=2 format=3 uid="uid://8w67xbxm66t5"]

[ext_resource type="Script" path="res://player.gd" id="1_5y57b"]

[node name="CarPhysics" type="CarPhysics"]
wheel1 = NodePath("Node3D/Wheel1")
wheel2 = NodePath("Node3D/Wheel2")
wheel3 = NodePath("Node3D/Wheel3")
wheel4 = NodePath("Node3D/Wheel4")
body = NodePath("Node3D/Body")
script = ExtResource("1_5y57b")

[node name="Node3D" type="Node3D" parent="."]

[node name="Wheel1" type="Node3D" parent="Node3D"]
transform = Transform3D(-4.64716e-05, 1, 9.69473e-08, 1, 4.64716e-05, 8.06524e-06, 8.06524e-06, 9.73221e-08, -1, -0.899952, 1.30056, -1.4)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Node3D/Wheel1"]
radius = 0.3
height = 0.25
sides = 18

[node name="Wheel2" type="Node3D" parent="Node3D"]
transform = Transform3D(-4.64716e-05, 1, 9.6944e-08, 1, 4.64716e-05, 8.13461e-06, 8.13461e-06, 9.73221e-08, -1, 0.900048, 1.30052, -1.4)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Node3D/Wheel2"]
radius = 0.3
height = 0.25
sides = 18

[node name="Wheel3" type="Node3D" parent="Node3D"]
transform = Transform3D(-4.64716e-05, 1, 9.697e-08, 1, 4.64716e-05, 7.57555e-06, 7.57555e-06, 9.73221e-08, -1, -0.899952, 1.30053, 1.4)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Node3D/Wheel3"]
radius = 0.3
height = 0.25
sides = 18

[node name="Wheel4" type="Node3D" parent="Node3D"]
transform = Transform3D(-4.64716e-05, 1, 9.69534e-08, 1, 4.64716e-05, 7.93227e-06, 7.93227e-06, 9.73221e-08, -1, 0.900048, 1.30053, 1.4)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Node3D/Wheel4"]
radius = 0.3
height = 0.25
sides = 18

[node name="Body" type="Node3D" parent="Node3D"]
transform = Transform3D(-1, -4.64716e-05, 9.79262e-08, -4.64716e-05, 1, -1.29998e-05, -9.73221e-08, -1.29998e-05, -1, 2.2458e-05, 1.84764, -5.5447e-06)

[node name="CSGBox3D" type="CSGBox3D" parent="Node3D/Body"]
size = Vector3(1.8, 0.4, 4)

[node name="LookAt" type="Node3D" parent="Node3D/Body"]
unique_name_in_owner = true
transform = Transform3D(-1, -7.6194e-09, 8.70901e-08, 0, 0.996195, 0.0871557, -8.74228e-08, 0.0871557, -0.996195, 0, 1, 5)

[node name="EyeSocket" type="RemoteTransform3D" parent="Node3D/Body"]
transform = Transform3D(1, 1.26517e-12, 0, 1.26517e-12, 1, 0, 0, 0, 1, 0, 3, -7)
remote_path = NodePath("../../Eye")
update_rotation = false

[node name="Label3D" type="Label3D" parent="Node3D/Body"]
transform = Transform3D(-1, -4.64716e-05, -9.73221e-08, -4.64716e-05, 1, -1.29998e-05, 9.79262e-08, -1.29998e-05, -1, 0, 1.3, 0)
billboard = 1
text = "Player Name"

[node name="Eye" type="Node3D" parent="Node3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000117642, 4.84773, 6.99996)

[node name="FinishLookAt" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="FinishEye" type="Node3D" parent="."]
unique_name_in_owner = true
